--- a/team/index.html
+++ b/team/index.html
@@ -48,7 +48,6 @@
             </div>
             <div class="team-title">
                 <h5>Syave Maruthi Prasad</h5>
-                <span>1ST18CS748</span><br>
                 <span>7337412283</span><br>
                 <span style="text-transform:lowercase;">syavemaruthi18@gmail.com</span>
             </div>
@@ -58,7 +57,7 @@
         <div class="col-md-4 col-sm-4">
             <div class="team-member">
                 <div class="team-img">
-                    <img src="Profile1.jpg" alt="team member" class="img-responsive">
+                    <img src="profile1.jpg" alt="team member" class="img-responsive">
                 </div>
                 <div class="team-hover">
                     <div class="desk">
@@ -74,7 +73,6 @@
             </div>
             <div class="team-title">
                 <h5>Thejas P Shindhe</h5>
-                <span>1ST18CS154</span><br>
                 <span>7795522443</span><br>
                 <span style="text-transform:lowercase;">ThejasPShindi@gmail.com</span>
             </div>
